--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ EMAIL_FROM_ADDRESS="Tzur Global <no-reply@tzurglobal.com>"
 ADMIN_EMAIL=your_admin_email@example.com
 
 # MongoDB Connection String
-MONGODB_URI=mongodb://localhost:27017/tzur_global_db # Replace with your actual URI
+MONGODB_URI=mongodb+srv://ravindharupm:sXJszHE4bXh90Oqt@cluster0.hbyfyxz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 # Replace with your actual URI
 
 # Node Environment
 NODE_ENV=development
